# CMake_Learn

./: CMakeLists.txt  Readme.md  main.cc  main.cpp
src/: CMakelists.txt  hello.cc  hello.cpp  hello.h
test/: CMakelists.txt  test_my_class.cc
tests/: CMakelists.txt
tests/unit_tests/: CMakelists.txt  test_hello.cpp
